--- a/nvim/.luarc.json
+++ b/nvim/.luarc.json
@@ -1,5 +1,11 @@
 {
     "diagnostics.globals": [
         "des"
+    ],
+    "diagnostics.disable": [
+        "missing-parameter",
+        "undefined-doc-name",
+        "missing-fields",
+        "unused-local"
     ]
 }
